--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "depsimon/laravel-wallet",
+    "name": "ujjwalwahi/laravel-wallet",
     "description": "Easy to use virtual wallet for your app",
     "keywords": [
         "depsimon",
@@ -9,7 +9,7 @@
         "credits",
         "wallet"
     ],
-    "homepage": "https://github.com/depsimon/laravel-wallet",
+    "homepage": "https://github.com/ujjwalwahi/laravel-wallet",
     "license": "MIT",
     "authors": [
         {
@@ -20,8 +20,8 @@
         }
     ],
     "require": {
-        "php": "^7.0",
-        "illuminate/database": "~5.6|^6.0"
+        "php": "^7.2",
+        "illuminate/database": "^6.0"
     },
     "autoload": {
         "psr-4": {
