--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,8 @@
         }
     ],
     "require": {
-        "php": "^7.0",
-        "illuminate/database": "~5.6|^6.0|^7.0|^8.0"
+        "php": "^7.0|^8.0",
+        "illuminate/database": "~5.6|^6.0|^7.0|^8.0|^9.0"
     },
     "autoload": {
         "psr-4": {
